--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.3.0",
     "gg-editor": "^2.0.2",
+    "highlight.js": "^11.6.0",
     "jsbarcode-react": "^0.2.5",
     "lodash": "^4.17.0",
     "lodash-decorators": "^6.0.0",
+    "marked": "^4.1.1",
     "moment": "^2.29.0",
     "numeral": "^2.0.6",
     "nzh": "^1.0.3",
@@ -81,7 +83,9 @@
     "react-dom": "^17.0.0",
     "react-fittext": "^1.0.0",
     "react-helmet-async": "^1.2.0",
+    "react-markdown": "^8.0.3",
     "react-router": "^4.3.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-to-print": "^2.14.7",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10",
@@ -115,6 +119,7 @@
     "lint-staged": "^10.0.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.5.0",
+    "raw-loader": "^4.0.2",
     "stylelint": "^13.0.0",
     "swagger-ui-react": "^3.52.0",
     "typescript": "^4.5.0",
