--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-router": "^4.3.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-to-print": "^2.14.7",
+    "typed.js": "^2.0.12",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10",
     "xml-formatter": "^2.6.1"
