--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "playwright": "playwright install && playwright test",
     "prepare": "husky install",
     "prettier": "prettier -c --write \"src/**/*\"",
-    "serve": "umi-serve",
+    "serve": "set NODE_OPTIONS=\"--openssl-legacy-provider\" & umi-serve",
     "start": "cross-env UMI_ENV=dev umi dev",
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev umi dev",
     "start:no-mock": "cross-env MOCK=none UMI_ENV=dev umi dev",
