--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": "set NODE_OPTIONS=\"--openssl-legacy-provider\" & umi build",
+    "build": "umi build",
     "deploy": "npm run build && npm run gh-pages",
     "dev": "npm run start:dev",
     "gh-pages": "gh-pages -d dist",
@@ -87,7 +87,6 @@
     "react-router": "^4.3.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-to-print": "^2.14.7",
-    "typed.js": "^2.0.12",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10",
     "xml-formatter": "^2.6.1"
