--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-helmet-async": "^1.2.0",
     "react-markdown": "^8.0.3",
     "react-router": "^4.3.1",
+    "react-smooth-dnd": "^0.11.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-to-print": "^2.14.7",
     "react-window": "^1.8.8",
