--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "bizcharts": "^3.5.3-beta.0",
     "bizcharts-plugin-slider": "^2.1.1-beta.1",
     "classnames": "^2.3.0",
+    "decimal.js": "^10.4.3",
     "gg-editor": "^2.0.2",
     "highlight.js": "^11.6.0",
     "jsbarcode-react": "^0.2.5",
