--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-to-print": "^2.14.7",
     "react-window": "^1.8.8",
+    "scrollreveal": "^4.0.9",
     "typed.js": "^2.0.12",
     "umi": "^3.5.0",
     "umi-serve": "^1.9.10",
